--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      
+      - name: Fetch all remote branches
+        run: git fetch --all
 
       - name: Set up Python
         uses: actions/setup-python@v4
